# rag-es-demo

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/chunkers/: __init__.py  markdown_chunker.py
app/core/: __init__.py  embedder.py  error_codes.py  es_client.py  kb_store.py  response.py
app/retrievers/: __init__.py  bm25_retriever.py  hybrid_retriever.py  vector_retriever.py
app/routers/: __init__.py  chat.py  knowledge_base.py  search.py  upload.py
app/schemas/: __init__.py  request.py  response.py
app/services/: __init__.py  chat_service.py  ingest_service.py
docs/superpowers/plans/: 2026-05-18-rag-es-demo-plan.md  2026-05-22-rag-es-optimization-plan.md
docs/superpowers/specs/: 2026-05-18-rag-es-demo-design.md  2026-05-22-rag-es-optimization-design.md
tests/: conftest.py  test_config.py
tests/test_chunkers/: __init__.py  test_markdown_chunker.py
tests/test_core/: test_es_client.py
tests/test_retrievers/: __init__.py  test_bm25_retriever.py  test_hybrid_retriever.py  test_vector_retriever.py
tests/test_routers/: __init__.py  test_chat.py  test_knowledge_base.py  test_search.py  test_upload.py
tests/test_schemas/: test_response.py
tests/test_services/: test_chat_service.py  test_ingest_service.py
