[tool.poetry]
name = "rag-es-demo"
version = "0.1.0"
description = "RAG demo with Elasticsearch and LangChain"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.34" }
python-dotenv = "^1.0"
pydantic-settings = "^2.0"
elasticsearch = "^7.17"
langchain = "^0.3"
langchain-openai = "^0.3"
langchain-core = "^0.3"
sentence-transformers = "^3.0"
python-multipart = "^0.0.18"
httpx = "^0.28"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
